--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
+    <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyAtGQRDAr3I_BRJRLu4U89UTWk-Y1oIuLs" async="" defer="defer"></script>
     <script type='text/javascript'>
      google.charts.load('current', {
        'packages': ['geochart'],
